# GEN_EVAL

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: config.toml
configs/: dataset.yaml  default.yaml  metrics.yaml  reference.yaml  run.yaml
configs/runs/: cosmos.yaml  geely.yaml  real.yaml  sample.yaml
examples/: eval_config_example.yaml  manifest_example.json
scripts/: build_instance_tracks.py  evaluate.py  generate_references.py  init_ray.py  inspect_manifest.py  manifest_from_pkl.py  normalize_pkl.py  prepare_manifest.py  prepare_references.py  random_select.py  run_eval.py  summarize_results.py  visualize.py  visualize_6v_results.py  visualize_results.py
src/: __init__.py  schemas.py
src/dataset/: __init__.py  base.py  cosmos.py  geely.py  real.py  sample.py
src/gen_eval/: __init__.py  config.py  dataset.py  evaluator.py  execution.py  manifest_builder.py  reference.py  registry.py  result_summary.py  result_writer.py  schemas.py  video_io.py
src/gen_eval/metrics/: fvd.py  (+12 more)
src/models/: __init__.py  executor.py  gen_eval.py  local_parallel.py  ray_parallel.py  result.py
src/modules/: __init__.py  appearance_consistency.py  base.py  depth_consistency.py  instance_coherence.py  instance_consistency.py  semantic_consistency.py  temporal_consistency.py  video_integrity.py  view_consistency.py
src/reference/: __init__.py  base.py  depth.py  depthanything_depth.py  openseed_semantic.py  planning.py  preparer.py  tracking.py
src/visualization/: __init__.py  base.py  composer.py  depth.py  vis_depth.py  vis_multiview_match.py  vis_semantic.py
(+74 files in other folders)
