[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gen-eval"
version = "0.1.0"
description = "Lightweight video generation evaluation skeleton extracted from WorldLens."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "GEN_EVAL" }
]
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
